<resources>
    <string name="app_name">Caronas</string>
    <string name="email"> Email*</string>
    <string name="senha"> Senha*</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_a_senha">Esqueceu a senha ? Clique aqui</string>
    <string name="foto">Foto</string>
    <string name="nome">Nome*</string>
    <string name="oferecer_carona">Oferecer Carona</string>
    <string name="procurar_carona">Procurar Carona</string>
    <string name="title_activity_initial">InitialActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="action_logout">Sair</string>

    <string name="menu_inicial">Pagina Inicial</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Compartilhar</string>
    <string name="menu_send">Enviar Feedback</string>
    <string name="caronas_favoritas">Caronas Favoritas</string>
    <string name="feedback">Feedback</string>
    <string name="historico_de_caronas">Historico de Caronas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="criar_carona">Criar Carona</string>
    <string name="endere_o">Endereço: </string>
    <string name="horario_de_saida">Horario: </string>
    <string name="local_de_sa_da">Saída: </string>
    <string name="local_de_chegada">Chegada: </string>
    <string name="data">Data: </string>
    <string name="quantidade_vagas">Vagas:</string>
    <string name="title_activity_maps">Confirme Os Dados</string>
    <string name="preciso_de_ajuda_r_2_00">Preciso de ajuda</string>
    <string name="passageiros">1</string>
    <string name="tempo_m_dio">Tempo médio:</string>
    <string name="distancia">Kms:</string>
    <string name="title_activity_pagina_inicial">Pagina Inicial</string>
    <string name="nav_header_title">Wemerson Monteiro</string>
    <string name="nav_header_subtitle">wemerson.monteiro@android.com</string>
    <string name="historico_caronas">Historico Caronas</string>
    <string name="title_activity_recuperar_senha">Recuperar sua senha</string>
    <string name="confirmar">confirmar</string>
    <string name="texto_redefinir_senha">Para redefinir sua senha, informe o email cadastrado na sua conta que enviaremos um link com as instruções.</string>
    <string name="digite_seu_email">Digite seu email</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ainda_n_o_foi_oferecida_nenhuma_carona_ncompartilhe_e_indique_o_app_para_seus_amigos">Ainda não foi oferecida nenhuma carona. Compartilhe e indique o app para seus amigos</string>
    <string name="telefone">Telefone</string>
    <string name="textoSobreOQueFazer">Não se esqueça que você garantiu uma vaga na carona. Fique sempre atento as notificações do App Caronas Você pode desistir da sua vaga ou compartilhar com um amigo.</string>
    <string name="pesquisar_carona">Pesquisar Carona</string>
    <string name="minhas_caronas">Minhas Caronas</string>
    <string name="entre_em_contato">Entre em contato</string>
    <string name="desistir_da_vaga">Desistir da vaga</string>


</resources>
