<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundo"
    tools:context=".views.LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_foto_arredondada"
        android:src="@drawable/img_login" />


    <EditText
        android:layout_height="40dp"
        android:id="@+id/emailLogin"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/logo"
        android:background="@drawable/button_redondo"
        android:layout_centerHorizontal="true"
        android:paddingStart="15dp"
        android:backgroundTint="@color/colorBranco"
        android:ems="13"
        android:hint="@string/email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/emailLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:counterEnabled="true"
        app:passwordToggleEnabled="true">


        <EditText
            android:id="@+id/senhaLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_redondo"
            android:paddingStart="15dp"
            android:backgroundTint="@color/colorBranco"
            android:ems="13"
            android:hint="@string/senha"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/password_til"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_redondo"
        android:ems="17"
        android:text="@string/entrar"
        android:textColor="@color/colorBranco"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCriarConta"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/btnEntrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_redondo_branco"
        android:ems="17"
        android:text="@string/criar_conta"
        android:textColor="@color/colorLilasStart"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEsqueceuASenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCriarConta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/esqueceu_a_senha"
        android:textColor="@color/colorLilasStart"
        android:textSize="17sp"
        android:textStyle="bold" />


</RelativeLayout>