<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFundo"
    tools:context=".views.CriarContaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgEscolherFoto"
            android:layout_width="220dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/foto_carregar" />


        <EditText
            android:id="@+id/edNomeNovo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imgEscolherFoto"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_redondo"
            android:backgroundTint="#E9E6E6"
            android:ems="13"
            android:hint="@string/nome" />


        <EditText
            android:id="@+id/edEnderecoNovo"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_below="@+id/edNomeNovo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_redondo"
            android:backgroundTint="#E9E6E6"
            android:ems="13"
            android:hint="@string/endere_o" />

        <ImageView
            android:id="@+id/useMyLocation"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/edNomeNovo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/edEnderecoNovo"
            android:src="@drawable/ic_location" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edEnderecoNovo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:background="@drawable/text_redondo"
                android:backgroundTint="#E9E6E6"
                android:ems="13"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_til"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:counterEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edSenhaNovo"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/text_redondo"
                android:backgroundTint="#E9E6E6"
                android:ems="13"
                android:hint="@string/senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/edTelefoneNovo"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/password_til"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_redondo"
            android:backgroundTint="#E9E6E6"
            android:ems="13"
            android:hint="@string/telefone"
            android:inputType="phone"
            app:met_mask="(##) # ####-####" />

    </RelativeLayout>


    <Button
        android:id="@+id/btEntrarNovo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorLilas"
        android:ems="13"
        android:text="@string/criar_conta"
        android:textColor="#F2F2F5"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>